tests/ui/error-comments.goml
screenshot-comparison: false
go-to: "file://" + |CURRENT_DIR| + "/" + |DOC_PATH| + "/elements.html"
// blabla
assert-property: ("body", {"clientWidth": "194", "offsetWidth": "200"})
//~^ ERROR: [expected `194` for property `"clientWidth"`, found `1000`; expected `200` for property `"offsetWidth"`, found `1000`]
